--- a/user-center/my-data/add-pw/aes/index.html
+++ b/user-center/my-data/add-pw/aes/index.html
@@ -40,6 +40,11 @@ $(".pwout").dialog({
 autoOpen: false,
 modal: true,
 buttons: {
+"复制结果": function(){
+copytext(pwout1.innerHTML) ? 
+($(this).dialog("close")) : 
+(document.querySelector(".pwout").innerHTML="按 Ctrl + C 复制 <br><textarea cols=50 rows=5>"+pwout1.innerHTML+"</textarea>")
+},
 "确定": function(){
 $(this).dialog("close");
 }
@@ -49,6 +54,11 @@ $(".pwout2").dialog({
 autoOpen: false,
 modal: true,
 buttons: {
+"复制结果": function(){
+copytext(pwout3.innerHTML) ? 
+($(this).dialog("close")) : 
+(document.querySelector(".pwout2").innerHTML="按 Ctrl + C 复制 <br><textarea cols=50 rows=5>"+pwout3.innerHTML+"</textarea>")
+},
 "确定": function(){
 $(this).dialog("close");
 }
