--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -88,9 +88,11 @@ var out1=false
 }
 
 if((!out1)){
-      let ud=JSON.parse(localStorage.userdata)
-      let pw=CryptoJS.MD5(password.value)
-      ud.data.push({username: username.value,password: pw})
+      let ud=JSON.parse(localStorage.userdata);
+      let pw=CryptoJS.MD5(password.value);
+      ud.data.push({username: username.value,password: pw});
+      ud=JSON.stringify(ud);
+      localStorage.userdata=ud;
       $( "#diaok" ).dialog( "open" );
 } else {
       $( "#diah" ).dialog( "open" );
