--- a/returnto/make.html
+++ b/returnto/make.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <h1>制作重定向链接</h1>
-<form id=makelk>
+<form id=makelk onsubmit="return false;">
 链接:<input id=linki size=50>
 <button type=submit>制作</button>
 </form>
 制作结果:<br>
 <textarea id=outresult readonly placeholder=制作结果 cols=50 rows=3></textarea>
 
-<script>
+<script defer>
 makelk.onsubmit=function(){
 let a=linki.value;
 a=encodeURIComponent(a);
