--- a/returnto/make.html
+++ b/returnto/make.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>制作重定向链接</title>
   <script src="https://shc7432.github.io/public/something/sometool.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://shc0743.github.io/crypto-js/core.js"></script>
+<script src="https://shc0743.github.io/crypto-js/enc-base64.js"></script>
+<script src="https://shc0743.github.io/crypto-js/enc-hex.js"></script>
+<script src="https://shc0743.github.io/crypto-js/enc-utf8.js"></script>
+<script src="https://shc0743.github.io/crypto-js/enc-utf16.js"></script>
+<script src="https://shc0743.github.io/crypto-js/crypto-js.js"></script>
+<script src="https://shc0743.github.io/crypto-js/aes.js"></script>
+<script src="https://shc0743.github.io/crypto-js/md5.js"></script>
+<script src="https://shc0743.github.io/crypto-js/sha1.js"></script>
+<script src="https://shc0743.github.io/crypto-js/sha512.js"></script>
 </head>
 <body>
 <h1>制作重定向链接</h1>
