--- a/returnto/make.html
+++ b/returnto/make.html
@@ -23,17 +23,16 @@
 <body>
 <h1>制作重定向链接</h1>
 <form id=makelk onsubmit="return false;">
-链接:<input id=linki size=50>
+链接:<input id=linki size=40>
 <button type=submit>制作</button>
 </form>
 制作结果:<br>
 <textarea id=outresult readonly placeholder=制作结果 cols=50 rows=3></textarea>
 
-<script defer>
+<script>
 makelk.onsubmit=function(){
 let a=linki.value;
 a=encodeURIComponent(a);
-a=aesPw.add(a,"123456");
 a="https://shc7432.github.io/download/returnto/return?link="+a;
 outresult.value=a;
 return false;
