--- a/returnto/return.php.html
+++ b/returnto/return.php.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>正在重定向</title>   
 <script>
-location.href="return.php?"+location.href.split("?")
+location.href="return.php?"+location.href.split("?")[1]
 </script>  
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 </head>
