--- a/returnto/return9.api.html
+++ b/returnto/return9.api.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>请稍候</title>   
 <script>
-location.href="return10.sql?"+location.href.split("?")
+location.href="return10.sql?"+location.href.split("?")[1]
 </script>
 </head>
 <body>
