--- a/returnto/return.php.html
+++ b/returnto/return.php.html
@@ -16,7 +16,7 @@
 
 <p>您也可以立即重定向</p>
 
-<p style="text-align:center;"><button class="goButton" style="height:35px;background-color:#00a;" onclick='location.href="return1.html?"+location.href.split("?")[1]'>继续</button></p>
+<p style="text-align:center;"><button class="goButton" style="height:35px;background-color:#3a87fe;" onclick='location.href="return1.html?"+location.href.split("?")[1]'>继续</button></p>
 
 <script>
 document.querySelector(".goButton").style.width=(screen.width-60)+"px";
