--- a/returnto/make.html
+++ b/returnto/make.html
@@ -23,7 +23,9 @@
 <body>
 <h1>制作重定向链接</h1>
 <form id=makelk onsubmit="return false;">
-链接:<input id=linki size=40>
+链接:<input id=linki size=40><br>
+<input type=checkbox id=cjadd>多重重定向<br>
+<input type=checkbox id=needpw>需要密码<br>
 <button type=submit>制作</button>
 </form>
 制作结果:<br>
