--- a/returnto/make.html
+++ b/returnto/make.html
@@ -24,8 +24,8 @@
 <h1>制作重定向链接</h1>
 <form id=makelk onsubmit="return false;">
 链接:<input id=linki size=40><br>
-<input type=checkbox id=cjadd>多重重定向<br>
-<input type=checkbox id=needpw>需要密码<br>
+<input type=checkbox id=cjadd>多次重定向<br>
+<input type=checkbox id=needpw>需要密码<br>密码:<input id=setpwv><br>
 <button type=submit>制作</button>
 </form>
 制作结果:<br>
@@ -33,9 +33,19 @@
 
 <script>
 makelk.onsubmit=function(){
+if(cjadd.checked){
 let a=linki.value;
 a=encodeURIComponent(a);
 a="https://shc7432.github.io/download/returnto/return?link="+a;
+} else {
+let a=linki.value;
+a=encodeURIComponent(a);
+a="https://shc7432.github.io/download/returnto/return?isNotMuch=true&link="+a;
+}
+if(needpw.checked){
+let pw=setpwv.value;
+pw=pwTools.
+}
 outresult.value=a;
 return false;
 }
