--- a/returnto/make.html
+++ b/returnto/make.html
@@ -23,7 +23,7 @@
 <body>
 <h1>制作重定向链接</h1>
 <form id=makelk onsubmit="return false;">
-链接:<input id=linki size=40 required><br>
+链接:<input id=linki size=40 required type=url><br>
 <input type=checkbox id=cjadd>多次重定向<br>
 <input type=checkbox id=needpw>需要密码<br>密码:<input id=setpwv type=text maxlength=15 placeholder="最大长度15位"><br>
 <button type=submit>制作</button>
