--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -24,11 +24,48 @@
   window.getip=window.getIP=function(){
     return returnCitySN.cip;
   }
+
+  $(function(){
+    $(".replaceresult").dialog({
+      autoOpen: false,
+      modal: true,
+      buttons: {
+        "确定": function () {
+          $( this ).dialog( "close" );
+        }
+      }
+    })
+  })
 </script>
 </head>
 <body>
 
 <h1>@人 生成器</h1>
+
+<form style="border:1px solid #ccc;" action="" method="get">
+输入你要@的人 :<input name=username><br>
+<button type=submit>提交</button>
+</form>
+
+<div class="replaceresult" title="生成结果">
+<textarea cols="50" rows="8" id=replacestringresult></textarea>
+</div>
+
+<script>
+(function(){
+var uname=getUrlValue("username");
+var str="你们不要老@wuli小周 了，你们天天@wuli小周 @wuli小周 @wuli小周 @wuli小周 的，"+
+"你们有没有考虑过@wuli小周 的感受？你们知道人家@wuli小周 做视频有多辛苦吗？你们老@wuli小周"+
+" @wuli小周 @wuli小周 没完没了的@wuli小周 @wuli小周 @wuli小周 ，你们再这样@wuli小周 会"+
+"很生气的。@wuli小周 可很难抽出时间看你们的@wuli小周 ，以后不要老@wuli小周 @wuli小周 "+
+"@wuli小周 了"
+if(uname){
+var rstr=str.replace((new RegExp("wuli小周","g")),uname);
+replacestringresult.value=rstr;
+$(".replaceresult").dialog("open");
+}
+})()
+</script>
 
 </body>
 </html>
