--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -70,6 +70,7 @@ adddoge.checked=doge;
 dogenum.value=dogen;
 var rstr=str.replace((new RegExp("wuli小周","g")),uname);
 if(doge){
+dogenum.hidden=0;
 if(!dogen) dogen=1;
 for(let i=0;i<dogen;i++){
 rstr+="[doge]";
