--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -45,7 +45,7 @@
 <form style="border:1px solid #ccc;" action="" method="get">
 输入你要@的人 :<input name=username id=atpeopleusername><br>
 添加doge :<input type=checkbox name=adddoge id=adddoge>
-<input name=dogenum hidden id=dogenum placeholder="doge数量,默认1"><br>
+<input name=dogenum hidden id=dogenum placeholder="doge数量,默认1" type=number><br>
 <button type=submit>提交</button>
 </form>
 
