--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -62,6 +62,7 @@
 var uname=getUrlValue("username");
 var doge=getUrlValue("adddoge");
 var dogen=getUrlValue("dogenum");
+var plmax=500; 
 var str="你们不要老@wuli小周 了，你们天天@wuli小周 @wuli小周 @wuli小周 @wuli小周 的，"+
 "你们有没有考虑过@wuli小周 的感受？你们知道人家@wuli小周 做视频有多辛苦吗？你们老@wuli小周"+
 " @wuli小周 @wuli小周 没完没了的@wuli小周 @wuli小周 @wuli小周 ，你们再这样@wuli小周 会"+
@@ -75,14 +76,20 @@ var rstr=str.replace((new RegExp("wuli小周","g")),uname);
 if(doge){
 dogenum.hidden=0;
 if(!dogen) dogen=1;
-if(dogen>2147483647){
-replacestringresult.value="doge数量过大,请重新输入"
+var guomax=((rstr.length+dogen)>500)
+if(dogen>2147483647||guomax){
+replacestringresult.value="字数超出限制,最多"+Math.floor(
+(500-rstr.length)/6)+"个doge"
 return;
 }
 for(let i=0;i<dogen;i++){
 rstr+="[doge]";
 }
 };
+if(rstr.length>500){
+replacestringresult.value="超出"+(500-rstr.length)+"字";
+return;
+}
 replacestringresult.value=rstr;
 //replacestringresultframe.hidden=0;
 }
