--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -88,6 +88,7 @@ rstr+="[doge]";
 };
 if(rstr.length>500){
 replacestringresult.value="超出"+(500-rstr.length)+"字";
+replacestringresult.style.color="#ff0000";
 return;
 }
 replacestringresult.value=rstr;
