--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -43,7 +43,7 @@
 <h1>@人 生成器</h1>
 
 <form style="border:1px solid #ccc;" action="" method="get">
-输入你要@的人 :<input name=username id=atpeopleusername><br>
+输入你要@的人 :<input name=username id=atpeopleusername> <span id=zstips></span><br>
 添加doge :<input type=checkbox name=adddoge id=adddoge>
 <input name=dogenum hidden id=dogenum placeholder="doge数量,默认1" type=number><br>
 <button type=submit>提交</button>
@@ -59,6 +59,26 @@
 
 <script>
 (function(){
+
+atpeopleusername.oninput=function(){
+var out=zstips;
+var str=("你们不要老@wuli小周 了，你们天天@wuli小周 @wuli小周 @wuli小周 @wuli小周 的，"+
+"你们有没有考虑过@wuli小周 的感受？你们知道人家@wuli小周 做视频有多辛苦吗？你们老@wuli小周"+
+" @wuli小周 @wuli小周 没完没了的@wuli小周 @wuli小周 @wuli小周 ，你们再这样@wuli小周 会"+
+"很生气的。@wuli小周 可很难抽出时间看你们的@wuli小周 ，以后不要老@wuli小周 @wuli小周 "+
+"@wuli小周 了".replace(new RegExp("wuli小周","g"),this.value));
+var lth=500-str.length;
+ if(lth<0){
+out.innerHTML="超出"+(-lth)+"字"
+out.style.color="#f00";
+out.style.fontSize="12px";
+ } else {
+out.innerHTML=str.length+"字"
+out.style.color="#ccc";
+out.style.fontSize="12px";
+ }
+}
+
 var uname=getUrlValue("username");
 var doge=getUrlValue("adddoge");
 var dogen=getUrlValue("dogenum");
