--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -66,10 +66,9 @@ var str=("你们不要老@wuli小周 了，你们天天@wuli小周 @wuli小周 @
 "你们有没有考虑过@wuli小周 的感受？你们知道人家@wuli小周 做视频有多辛苦吗？你们老@wuli小周"+
 " @wuli小周 @wuli小周 没完没了的@wuli小周 @wuli小周 @wuli小周 ，你们再这样@wuli小周 会"+
 "很生气的。@wuli小周 可很难抽出时间看你们的@wuli小周 ，以后不要老@wuli小周 @wuli小周 "+
-"@wuli小周 了".replace(new RegExp("wuli小周","g"),this.value));
-var lth=500-str.length;
- if(lth<0){
-out.innerHTML="超出"+(-lth)+"字"
+"@wuli小周 了".replace(,this.value));
+ if(str.length>500){
+out.innerHTML="超出"+(str.length-500)+"字"
 out.style.color="#f00";
 out.style.fontSize="12px";
  } else {
