--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -76,10 +76,10 @@ out.innerHTML=str.length+"字"
 out.style.color="#ccc";
 out.style.fontSize="12px";
  }
-this.value=encodeURIComponent(this.value);
+this.value=(this.value).replace(new RegExp(" ","g"),"%20");
 }
 
-var uname=getUrlValue("username");
+var uname=decodeURIComponent(getUrlValue("username"));
 var doge=getUrlValue("adddoge");
 var dogen=getUrlValue("dogenum");
 var plmax=500; 
