--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -76,7 +76,7 @@ out.innerHTML=str.length+"字"
 out.style.color="#ccc";
 out.style.fontSize="12px";
  }
-this.value=(this.value).replace(new RegExp(" ","g"),"%20");
+//this.value=(this.value).replace(new RegExp(" ","g"),"%20");
 }
 
 var uname=decodeURIComponent(getUrlValue("username"));
