--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -86,7 +86,7 @@ out.style.fontSize="12px";
 //this.value=(this.value).replace(new RegExp(" ","g"),"%20");
 }
 
-var uname=decodeURIComponent(getUrlValue("username"));
+var uname=getUrlValue("username");
 var doge=getUrlValue("adddoge");
 var dogen=getUrlValue("dogenum");
 var str="你们不要老@wuli小周 了，你们天天@wuli小周 @wuli小周 @wuli小周 @wuli小周 的，"+
