--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -30,6 +30,7 @@
       //创建userdata
       var ud={
         uid: (Math.floor(Math.random()*16)),
+        ip: getIP(),
         username: null,
         password: null
       }
