--- a/htmlmodel/htmlmodel.html
+++ b/htmlmodel/htmlmodel.html
@@ -24,6 +24,9 @@
   window.getip=window.getIP=function(){
     return returnCitySN.cip;
   }
+function getRandom(min, max) {
+    return Math.floor(Math.random() * (max - min + 1) ) + min;
+}
 </script>
 </head>
 <body>
