--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -27,6 +27,30 @@
 function getRandom(min, max) {
     return Math.floor(Math.random() * (max - min + 1) ) + min;
 }
+
+if(localStorage.userData){
+let ud=JSON.parse(localStorage.userData);
+let udtime=ud.time;
+udtime=new Date(udtime);
+udtc=(((new Date()-udtime)/1000)/3600);
+if(udtc>24){
+if(confirm("会话已过期\n按\"确定\"重新创建\n按\"取消\"刷新状态")){
+delete localStorage.userData;
+location.reload(1);
+} else {
+location.reload(1);
+}
+} else {
+window.userData=ud;
+}
+} else {
+let ud=new Object();
+ud.uid=getRandom(10000000,99999999);
+ud.id=CryptoJS.MD5(ud.uid);
+ud.time=new Date();
+uds=JSON.stringify(ud);
+localStorage.usetData=uds;
+}
 </script>
 </head>
 <body>
@@ -49,7 +73,9 @@ function getRandom(min, max) {
 <div style="font-size:10px;color:#ccc;">IP:<script>
 document.write(getIP())</script></div>
 <div style="font-size:10px;color:#ccc;">uid:<script>
-document.write(getRandom(10000000,99999999))</script></div>
+document.write(userData.uid)</script></div>
+<div style="font-size:10px;color:#ccc;">ID:<script>
+document.write(userData.id)</script></div>
 </div>
 
 <script>
