--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -33,7 +33,7 @@ let ud=JSON.parse(localStorage.userData);
 let udtime=ud.time;
 udtime=new Date(udtime);
 udtc=(((new Date()-udtime)/1000)/3600);
-if(udtc>24){
+if(udtc>23){
 if(confirm("会话已过期\n按\"确定\"重新创建\n按\"取消\"刷新状态")){
 delete localStorage.userData;
 location.reload(1);
@@ -49,7 +49,8 @@ ud.uid=getRandom(10000000,99999999);
 ud.id=CryptoJS.MD5(ud.uid);
 ud.time=new Date();
 uds=JSON.stringify(ud);
-localStorage.usetData=uds;
+localStorage.userData=uds;
+location.reload(1);
 }
 </script>
 </head>
