--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -36,7 +36,8 @@ udtc=(((new Date()-udtime)/1000)/3600);
 if(udtc>23){
 if(confirm("会话已过期\n按\"确定\"重新创建\n按\"取消\"刷新状态")){
 delete localStorage.userData;
-}
+location.reload(1);
+} else {
 location.reload(1);
 }
 } else {
