--- a/apps/smallapp/at-bilibili-user/index.html
+++ b/apps/smallapp/at-bilibili-user/index.html
@@ -15,14 +15,12 @@
 
 <p>您也可以立即重定向</p>
 
-<p>如果5秒后您仍看到此消息,请点击<noscript><a href="at.php">继续</a><noscript>继续</p>
+<p>如果5秒后您仍看到此消息,请点击<noscript><a href="at.php">继续</a></noscript>继续</p>
 
-<p style="text-align:center;display:none;" id=canscript hidden><button class="goButton" style="height:35px;background-color:#3a87fe;" onclick='location.href="at.php"'>继续</button></p>
+<p style="text-align:center;"><button class="goButton" style="height:35px;background-color:#3a87fe;" onclick='location.href="at.php"'>继续</button></p>
 
 <script>
 document.querySelector(".goButton").style.width=(screen.width-60)+"px";
-canscript.hidden=0;
-canscript.style.display="block";
 </script>
 
 </body>
