--- a/apps/smallapp/creeper/creeper.php.html
+++ b/apps/smallapp/creeper/creeper.php.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <title>Creeper?</title>   
- <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://shc7432.github.io/public/something/sometool.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css?">
 <script src="https://shc0743.github.io/crypto-js/core.js"></script>
 <script src="https://shc0743.github.io/crypto-js/enc-base64.js"></script>
 <script src="https://shc0743.github.io/crypto-js/enc-hex.js"></script>
@@ -33,7 +33,8 @@ font-size: 12px;
 <body>
 
 <div class="inputcontent" title="编辑歌词" hidden>
-<iframe style="border: 1px solid #ccc;" src="canedit.html"></iframe>
+<iframe style="border: 1px solid #ccc;" 
+src="javascript:document.documentElement.contenteditable=1"></iframe>
 </div>
 
 <div>
