--- a/apps/smallapp/creeper/creeper.php.html
+++ b/apps/smallapp/creeper/creeper.php.html
@@ -32,9 +32,8 @@ font-size: 12px;
 </head>
 <body>
 
-<div class="inputcontent" title="编辑歌词" 
-hidden style="border:1px solid #ccc;" contenteditable>
-</div>
+<div class="inputcontent" title="编辑歌词" hidden 
+style="border:1px solid #ccc;" contenteditable></div>
 
 <div>
 
