--- a/apps/smallapp/creeper/creeper.php.html
+++ b/apps/smallapp/creeper/creeper.php.html
@@ -33,6 +33,7 @@ font-size: 12px;
 <body>
 
 <div class="inputcontent" title="编辑歌词" hidden 
+oninput="sessionStorage.editsing=this.innerHTML;"
 style="border:1px solid #ccc;" contenteditable></div>
 
 <div>
